--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Generate Prod build
-        run: ng build --prod
+      - name: Change directory to project root
+        run: cd /home/runner/work/chrome-bookmark-categorizer-visualizer/chrome-bookmark-categorizer-visualizer
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
