--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,15 @@ jobs:
           cd apps
           cd chrome-bookmark-categorizer-visualizer
           pwd
+        
+      # Set AWS access keys
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      
+      # Deploy
+      - name: Deploy
+        run: aws s3 sync . s3://tabcategorizer
